Bug #25314 ASCII mode transfers behaving like binary when initiated from windows.